--- a/neos-normalize.scss
+++ b/neos-normalize.scss
@@ -1,4 +1,4 @@
-/*! Neo's Normalize v1.0.6 : Neo (@Neos21) http://neo.s21.xrea.com/ */
+/*! Neo's Normalize v1.0.7 : Neo (@Neos21) http://neo.s21.xrea.com/ */
 
 
 // ==================================================
@@ -65,14 +65,14 @@ $nn-monospace   : MeiryoKe_Gothic, "Ricty Diminished", "Osaka－等幅", "Osaka-
 
 /* 変数定義 */
 :root {
-  --nn-grey-bg: #{$nn-grey-bg};
-  --nn-grey-border: #{$nn-grey-border};
-  --nn-green-bg: #{$nn-green-bg};
-  --nn-green-border: #{$nn-green-border};
-  // 変数展開によりダブルクォートが外れてしまうので、トランスパイル後に手修正する
-  --nn-sans-serif: #{$nn-sans-serif};
-  --nn-serif: #{$nn-serif};
-  --nn-monospace: #{$nn-monospace};
+  // SCSS 変数と同じ価にする
+  --nn-grey-bg: #f2f4f6;
+  --nn-grey-border: #d2d4d6;
+  --nn-green-bg: #ddffee;
+  --nn-green-border: #00ddaa;
+  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-serif: "游明朝体", YuMincho, "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN W3", HiraMinProN-W3, "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "HGS明朝E", "ＭＳ Ｐ明朝", "MS PMincho", Georgia, Times, "Times New Roman", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-monospace: MeiryoKe_Gothic, "Ricty Diminished", "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", SFMono-Regular, "Courier New", Courier, Monaco, Menlo, Consolas, "Lucida Console", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /* 全ての要素のボックスサイズの計算方法を border-box にする */
