--- a/neos-normalize.scss
+++ b/neos-normalize.scss
@@ -1,4 +1,4 @@
-/*! Neo's Normalize v1.0.7 : Neo (@Neos21) http://neo.s21.xrea.com/ */
+/*! Neo's Normalize v1.0.8 : Neo (@Neos21) http://neo.s21.xrea.com/ */
 
 
 // ==================================================
@@ -11,39 +11,45 @@ $nn-green-bg    : #ddffee !default;
 $nn-green-border: #00ddaa !default;
 // サンセリフ (ゴシック体)
 //  1. 英字   … Mac     iOS         … -apple-system, BlinkMacSystemFont,
-//  2. 和英   … Mac Win             … "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium",
-//  3. 和英   … Mac     iOS         … "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro",
-//  4. 和英   …     Win             … "メイリオ", Meiryo,
-//  5. 和英   … Mac                 … Osaka,
-//  6. 和英   …     Win             … "ＭＳ Ｐゴシック", "MS PGothic",
-//  7. 英字   … Mac                 … "Helvetica Neue", HelveticaNeue, Helvetica,
-//  8. 英字   … Mac Win             … Arial,
-//  9. 英字   …     Win             … "Segoe UI",
-// 10. 全般   …                     … sans-serif,
-// 11. 絵文字 … Mac     iOS         … "Apple Color Emoji",
-// 12. 絵文字 …     Win             … "Segoe UI Emoji", "Segoe UI Symbol",
-// 13. 絵文字 …             Android … "Noto Color Emoji"
-$nn-sans-serif  : -apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+//  2. 英字   … Mac                 … "Helvetica Neue",
+//  3. 英字   … Mac Win             … Helvetica,
+//  4. 和英   … Mac Win             … YuGothic, "Yu Gothic M", "Yu Gothic Medium",
+//  5. 和英   … Mac     iOS         … "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro",
+//  6. 和英   …     Win             … Meiryo,
+//  7. 全般   …                     … sans-serif,
+//  8. 絵文字 … Mac     iOS         … "Apple Color Emoji",
+//  9. 絵文字 …     Win             … "Segoe UI Emoji", "Segoe UI Symbol",
+// 10. 絵文字 …             Android … "Noto Color Emoji"
+// - "游ゴシック体", "游ゴシック Medium", "ヒラギノ角ゴ ProN", "ヒラギノ角ゴ Pro", "メイリオ" : 英語表記のみで良いので外した
+// - Osaka, "ＭＳ Ｐゴシック", "MS PGothic" : 古いので外した
+// - HelveticaNeue : Windows にインストールされている場合はコチラが効くが、レアケースなので外した
+// - Arial : Helvetica がエイリアスなので書かない
+// - "Segoe UI" : 文字が細くて気に入らないので Helvetica (= Arial のエイリアス) を使用するため外した
+// - Roboto : Helvetica の表記があると Roboto と解釈するらしいので書かない
+// TODO : 要調整 : "Hiragino Sans", "ヒラギノ角ゴシック", "ヒラギノ角ゴ Pro W3", "ヒラギノ角ゴシック Pro"
+$nn-sans-serif  : -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic M", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 // セリフ (明朝体)
-//  1. 和英   … Mac Win             … "游明朝体", YuMincho, "游明朝", "Yu Mincho",
-//  2. 和英   … Mac                 … "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN W3", HiraMinProN-W3, "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "ヒラギノ明朝 Pro", "Hiragino Mincho Pro",
-//  3. 和英   …     Win             … "HGS明朝E", "ＭＳ Ｐ明朝", "MS PMincho",
-//  4. 英字   … Mac Win             … Georgia,
-//  5. 英字   … Mac                 … Times,
-//  6. 英字   …     Win             … "Times New Roman",
+//  1. 英字   … Mac Win             … Georgia,
+//  2. 英字   … Mac                 … Times,
+//  3. 英字   …     Win             … "Times New Roman",
+//  4. 和英   … Mac Win             … "游明朝体", YuMincho, "游明朝", "Yu Mincho",
+//  5. 和英   … Mac                 … "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN W3", HiraMinProN-W3, "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "ヒラギノ明朝 Pro", "Hiragino Mincho Pro",
+//  6. 和英   …     Win             … "HGS明朝E"
 //  7. 全般   …                     … serif
-$nn-serif       : "游明朝体", YuMincho, "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN W3", HiraMinProN-W3, "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "HGS明朝E", "ＭＳ Ｐ明朝", "MS PMincho", Georgia, Times, "Times New Roman", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+// TODO : 游明朝・ヒラギノに無駄な表記がないか
+$nn-serif       : Georgia, Times, "Times New Roman", "游明朝体", YuMincho, "游明朝", "Yu Mincho", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN W3", HiraMinProN-W3, "ヒラギノ明朝 ProN", "Hiragino Mincho ProN", "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 // モノスペース (等幅)
 //  1. 和英   …     Win       [Mod] … MeiryoKe_Gothic,
 //  2. 和英   … Mac Win      [Open] … "Ricty Diminished",
 //  3. 和英   … Mac                 … "Osaka－等幅", "Osaka-等幅", Osaka-mono,
 //  4. 和英   …     Win             … "ＭＳ ゴシック", "MS Gothic",
 //  5. 英字   … Mac     iOS         … SFMono-Regular,
-//  6. 英字   … Mac Win             … "Courier New", Courier,
-//  7. 英字   … Mac                 … Monaco, Menlo,
-//  8. 英字   …     Win             … Consolas, "Lucida Console",
-//  9. 全般   …                     … monospace
-$nn-monospace   : MeiryoKe_Gothic, "Ricty Diminished", "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", SFMono-Regular, "Courier New", Courier, Monaco, Menlo, Consolas, "Lucida Console", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+//  6. 英字   …             Android … "Roboto Mono",
+//  7. 英字   … Mac Win             … "Courier New", Courier,
+//  8. 英字   … Mac                 … Monaco, Menlo,
+//  9. 英字   …     Win             … Consolas, "Lucida Console",
+// 10. 全般   …                     … monospace
+$nn-monospace   : MeiryoKe_Gothic, "Ricty Diminished", "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", SFMono-Regular, "Roboto Mono", "Courier New", Courier, Monaco, Menlo, Consolas, "Lucida Console", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 
 /* ==================================================
