--- a/neos-normalize.scss
+++ b/neos-normalize.scss
@@ -1,4 +1,4 @@
-/*! Neo's Normalize v1.0.9 : Neo (@Neos21) http://neo.s21.xrea.com/ */
+/*! Neo's Normalize v1.0.10 : Neo (@Neos21) http://neo.s21.xrea.com/ */
 
 
 // ==================================================
@@ -13,21 +13,21 @@ $nn-green-border: #00ddaa !default;
 //  1. 英字   … Mac     iOS         … -apple-system, BlinkMacSystemFont,
 //  2. 英字   … Mac     iOS         … "Helvetica Neue",
 //  3. 英字   … Mac Win iOS Android … Helvetica, (= Arial on Windows, Roboto on Android)
-//  4. 和英   … Mac Win             … YuGothic, "Yu Gothic M", "Yu Gothic Medium",
+//  4. 和英   … Mac Win             … YuGothic, "Yu Gothic",
 //  5. 和英   … Mac     iOS         … "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro"
 //  6. 和英   …     Win             … Meiryo,
 //  7. 全般   …                     … sans-serif,
 //  8. 絵文字 … Mac     iOS         … "Apple Color Emoji",
 //  9. 絵文字 …     Win             … "Segoe UI Emoji", "Segoe UI Symbol",
 // 10. 絵文字 …             Android … "Noto Color Emoji"
-$nn-sans-serif  : -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic M", "Yu Gothic Medium", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$nn-sans-serif  : -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 // セリフ (明朝体)
 //  1. 英字   … Mac Win iOS Android … Georgia, (= Noto Serif on Android)
-//  2. 和英   … Mac Win             … YuMincho, "Yu Mincho Medium", "Yu Mincho",
+//  2. 和英   … Mac Win             … YuMincho, "Yu Mincho",
 //  3. 和英   … Mac     iOS         … "Hiragino Mincho ProN", "Hiragino Mincho Pro",
 //  4. 和英   …     Win             … "HGS明朝E"
 //  5. 全般   …                     … serif
-$nn-serif       : Georgia, YuMincho, "Yu Mincho Medium", "Yu Mincho", "Hiragino Mincho ProN", "Hiragino Mincho Pro", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$nn-serif       : Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "Hiragino Mincho Pro", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 // モノスペース (等幅)
 //  1. 和英   …     Win       [Mod] … MeiryoKe_Gothic,
 //  2. 和英   … Mac Win      [Open] … "Ricty Diminished",
@@ -42,19 +42,6 @@ $nn-monospace   : MeiryoKe_Gothic, "Ricty Diminished", Osaka-mono, "MS Gothic", 
  * ページ全体
  * ================================================== */
 
-/* Windows 用 Medium 指定の游ゴシック */
-@font-face {
-  font-family: "Yu Gothic M";
-  src: local("Yu Gothic Medium");
-}
-
-/* 太字の時は Bold 書体を使用する */
-@font-face {
-  font-family: "Yu Gothic M";
-  src: local("Yu Gothic Bold");
-  font-weight: bold;
-}
-
 /* 変数定義 */
 :root {
   // SCSS 変数と同じ価にする
@@ -62,8 +49,8 @@ $nn-monospace   : MeiryoKe_Gothic, "Ricty Diminished", Osaka-mono, "MS Gothic", 
   --nn-grey-border: #d2d4d6;
   --nn-green-bg: #ddffee;
   --nn-green-border: #00ddaa;
-  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic M", "Yu Gothic Medium", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --nn-serif: Georgia, YuMincho, "Yu Mincho Medium", "Yu Mincho", "Hiragino Mincho ProN", "Hiragino Mincho Pro", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-serif: Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "Hiragino Mincho Pro", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --nn-monospace: MeiryoKe_Gothic, "Ricty Diminished", Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -74,7 +61,7 @@ $nn-monospace   : MeiryoKe_Gothic, "Ricty Diminished", Osaka-mono, "MS Gothic", 
   box-sizing: border-box;
 }
 
-/* ページ全体のスタイル設定 */
+/* ページ全体のスタイルを設定する */
 html {
   /* var(--nn-sans-serif) */
   font-family: $nn-sans-serif;
@@ -100,7 +87,7 @@ body {
   word-wrap: break-word;
 }
 
-/* IE11 でブロック要素として扱われない要素を設定しておく */
+/* IE でブロック要素として扱われない要素を設定しておく */
 details, main {
   display: block;
 }
@@ -184,7 +171,7 @@ pre, code, kbd, samp, var, textarea {
   font-family: $nn-monospace;
 }
 
-/* IE11 でフォントサイズが小さくなるのを直す */
+/* IE でフォントサイズが小さくなるのを直す */
 code, kbd, samp, var {
   font-size: 1em;
 }
@@ -197,6 +184,7 @@ button, input, optgroup, select {
   font-size: inherit;
 }
 
+/* テキストエリアはフォントサイズのみ親要素から継承させる */
 textarea {
   margin: 0;
   font-size: inherit;
@@ -334,7 +322,7 @@ q::after {
 }
 
 /* 隣接するテキストを上揃えにする */
-input, select, textarea {
+button, input, select, textarea {
   vertical-align: top;
 }
 
